--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		//跳转语句，如果是手机访问就自动跳转到手机端wap页面
 		if(system.win||system.mac||system.xll){
 		}else{
-      window.location.href = "https://alancs.lanzous.com/b00nh4j8h";
+      window.location.href = "https://sileo.ga";
        }
     </script>   
     <body>
